tests/ui/proc-macro/resolved-located-at.stderr
error: expected error
  --> $DIR/resolved-located-at.rs:7:25
   |
LL |     resolve_located_at!(a b)
   |     --------------------^--- in this macro invocation
   |
  ::: $DIR/auxiliary/resolved-located-at.rs:13:1
   |
LL | pub fn resolve_located_at(input: TokenStream) -> TokenStream {
   | ------------------------------------------------------------ in this expansion of `resolve_located_at!`

error[E0308]: mismatched types
  --> $DIR/resolved-located-at.rs:7:27
   |
LL | fn main() {
   |           - expected `()` because of default return type
LL |     resolve_located_at!(a b)
   |     ----------------------^-
   |     |                     |
   |     |                     expected `()`, found `S`
   |     in this macro invocation
   |
  ::: $DIR/auxiliary/resolved-located-at.rs:13:1
   |
LL | pub fn resolve_located_at(input: TokenStream) -> TokenStream {
   | ------------------------------------------------------------ in this expansion of `resolve_located_at!`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
